Fix PPO Component Revision UI
