# src/app/api/model/ppo-component-revision-response-dto-table-response-dto.ts
@@ -1,0 +1,18 @@
+/**
+ * CTS-BE
+ *
+ *
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+import { TableHeader } from './table-header';
+import { PpoComponentRevisionResponseDTO } from './ppo-component-revision-response-dto';
+
+export interface PpoComponentRevisionResponseDTOTableResponseDTO {
+    dataSource?: { [key: string]: any } | null;
+    headers?: Array<TableHeader> | null;
+    data?: Array<PpoComponentRevisionResponseDTO> | null;
+    readonly dataCount?: number;
+}
